Modification on file

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -86,7 +86,7 @@
   <!-- Other details -->
   <h2>Other details</h2>
   <div class="field user-form-width">
-  <%= f.label :aadhaar_no %><br />
+  <%= f.label "Upload Aadhaar card" %><br />
     <%= f.file_field :aadhaar_no_image %>
     <%#= f.text_field :other_detail_aadhaar_no , placeholder: "Aaadhaar Number" %> 
   </div>
