--- a/app/views/contact/_form.html.erb
+++ b/app/views/contact/_form.html.erb
@@ -18,7 +18,7 @@
 					<div class="contact">
 						<i class="fa fa-phone"></i>
 						<h3>Phone</h3>
-						<p>512-421-3940</p>
+						<p>020-3001-3155</p>
 					</div>
 				</div>
 				<!-- /contact -->
@@ -28,7 +28,7 @@
 					<div class="contact">
 						<i class="fa fa-envelope"></i>
 						<h3>Email</h3>
-						<p>email@support.com</p>
+						<p>support@3scsolution.com</p>
 					</div>
 				</div>
 				<!-- /contact -->
@@ -37,7 +37,7 @@
 					<div class="contact">
 						<i class="fa fa-map-marker"></i>
 						<h3>Address</h3>
-						<p>1739 Bubby Drive</p>
+						<p>EON Free Zone, Kharadi, Pune Maharashtra 411014 </p>
 					</div>
 				</div>
 				<!-- /contact -->
