--- a/app/views/trucks/_index.html.erb
+++ b/app/views/trucks/_index.html.erb
@@ -18,7 +18,13 @@
             <span id="cphContent_grdTruckPost_lblTruckType_23" title=<%= truck.truck_type %>><%= truck.truck_type %></span>
         </td><td>
         </td><td>
-            <a class="btn-xs btn-danger" onclick="CheckGuest(this)" href="#">Book</a>
+          <% if truck.truck_booked == true %>
+            <%= link_to "Booked", "javascript:void(0)", :class=>"btn-xs btn-success btn-white-color" %>
+          <% else %>
+            <%= link_to "Book", send_truck_booked_mail_path(:id=> truck.id), :class=>"btn-xs btn-danger btn-white-color" %>
+          <% end %>  
+        </td>
+            <!-- <a class="btn-xs btn-danger" onclick="CheckGuest(this)" href="#">Book</a> -->
         </td>
       <td>
     </td>
