--- a/app/views/static/_header.html.erb
+++ b/app/views/static/_header.html.erb
@@ -88,9 +88,9 @@
                </li> 
              </ul>
            </li>
- 					<li class="has-dropdown"><a href="#blog">Blog</a>
+ 					<li class="has-dropdown"><a href="#blog">Truck</a>
  						<ul class="dropdown">
- 							<li><a href="/">blog post</a></li>
+ 							<li><a href="/">Find a truck</a></li>
  						</ul>
  					</li>
  					<li>
@@ -100,6 +100,7 @@
  						<ul class="dropdown">
  							<% if user_signed_in? %>
  								<li>
+                  <%= link_to('Profile', user_profile_path(user_id:current_user.id))  %>
  									<%= link_to "Sign Out", destroy_user_session_path, :method => :delete %>
  								</li>
  							<% else %>
@@ -125,7 +126,7 @@
  					<!-- home content -->
  					<div class="col-md-10 col-md-offset-1">
  						<div class="home-content">
- 							<h1 class="white-text">We Are Creative Agency</h1>
+ 							<h1 class="white-text">We Are Creative 3SC</h1>
  							<p class="white-text">Morbi mattis felis at nunc. Duis viverra diam non justo. In nisl. Nullam sit amet magna in magna gravida vehicula. Mauris tincidunt sem sed arcu. Nunc posuere.
  							</p>
  							<button class="white-btn">Get Started!</button>
@@ -139,7 +140,49 @@
  		</div>
   <% end %>  
  		<!-- /home wrapper -->
- 
+  <% if user_signed_in? %>
+    <div class="col-md-12 inner_latest_updates_block ">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-8 col-sm-7">
+                        <div class="row">
+                            <div class="col-md-3 col-sm-3 latest-news">
+                                Latest Loads <span>|</span>
+                            </div>
+                            <div class="col-md-9 col-sm-9 scroll-news">
+                                <div id="quote-carousel" class="carousel slide" data-ride="carousel">
+                                    <div class="carousel-inner">
+                                         
+                                                                            <div class="item active">
+                                            <div class="row">                                          
+                                                <div class="col-sm-12">
+                                                  <a href="https://www.trucktek.in/index.php/Welcome/latest_load_board/15">
+                                                  Load available from Soro, Odisha, India to Dhanbad, Jharkhand, India                                                </a>
+                                                </div>                                           
+                                            </div>
+                                        </div>
+                                        
+                                                                            <div class="item">
+                                            <div class="row">                                          
+                                                <div class="col-sm-12">
+                                                  <a href="https://www.trucktek.in/index.php/Welcome/latest_load_board/17">
+                                                  Load available from Pune, Maharashtra, India to Nashik, Maharashtra, India                                                </a>
+                                                </div>                                           
+                                            </div>
+                                        </div>
+                                                  
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4  col-sm-5">
+                                                          <div class="pull-right live_trucks_details">5 + Live trucks   |   6 + Live Loads  </div>
+                    </div>            
+                </div>
+            </div>
+    </div>
+  <% end %>
  	</header>
  	<!-- /Header -->
 <script type="text/javascript">
