--- a/app/views/loads/_loads_title.html.erb
+++ b/app/views/loads/_loads_title.html.erb
@@ -1,6 +1,6 @@
 <div class="form-group">
   <div class="col-lg-12">
-      <h1 class="truckBoard-title">Load <span class="color_orange">Board</span>
+      <h1 class="truckBoard-title">Available Load <span class="color_orange">Board</span>
           <span id="cphContent_lblTotalTruckPostsCount load-counter-data" class="load-counter-data"> (<%=loads.count %>)</span></h1>
       <br>
   </div>
