--- a/app/views/loads/new.html.erb
+++ b/app/views/loads/new.html.erb
@@ -51,11 +51,11 @@
         </div> 
       </td>
       <td>
-        <div class="form-group" id="pin-code-source">
-        <label for="from">Source pin code<span>*</span></label>
-         <%= f.text_field :source_pin_code, class: "input control-label col-sm-4", :class=> "form-control", :placeholder=> "Source pin code" %>
-      </div>
-      </td>
+        <div class="form-group  " id="truck-type">
+          <label for="from">Truck Type<span>*</span></label>
+            <%= f.select :load_truck_type, options_for_select(Load::LOAD_TRUCK_TYPE.map {|k| [k.humanize.capitalize]}, :selected=> params[:load].present? ? params[:load][:load_truck_type] : ''), :prompt=>"Truck Type" %>
+        </div>
+    </td>
     </tr>
     <tr>
         <td>   </td>
@@ -69,8 +69,14 @@
     </td>
     <td>
       <div class="form-group form-margin-4">
-        <label for="from">Scheduled Date </span></label>
-         <span> <%= f.text_field :load_schedule_date, :id=> "datepicker" %></span>
+        <label for="from">Scheduled Date <span>*</span></span></label>
+         <span> <%= f.text_field :load_schedule_date, :id=> "datepicker", :placeholder=> "Scheduled Date" %></span>
+      </div>
+    </td>
+    <td>
+      <div class="form-group form-margin-4">
+        <label for="from">Expected Price <span>*</span></span></label>
+         <span> <%= f.text_field :expected_price, :id=> "datepicker", :placeholder=> "Expected Price" %></span>
       </div>
     </td>
   </tr>
@@ -79,19 +85,23 @@
       </tr>
   <tr>
     <td>
+      <div class="form-group" id="pin-code-source">
+      <label for="from">Pick-up Address<span>*</span></label>
+       <%= f.text_field :source_pin_code, class: "input control-label col-sm-4", :class=> "form-control", :placeholder=> "Pick-up Address" %>
+    </div>
+      </td>
+    <td>
       <div class="form-group" id="pin-code-destination">
-        <label for="from">Destination pin code<span>*</span></label>
-         <%= f.text_field :destination_pin_code, class: "input control-label col-sm-4", :class=> "form-control", :placeholder=> "Destination pin code" %>
+        <label for="from">Delivery Address<span>*</span></label>
+         <%= f.text_field :destination_pin_code, class: "input control-label col-sm-4", :class=> "form-control", :placeholder=> "Delivery Address" %>
       </div>
     </td>
     <td>
-      <%# if params[:load].present? and params[:load][:load_type] != "Part load" %>
-          <div class="form-group  " id="truck-type">
-            <label for="from">Truck Type<span>*</span></label>
-              <%= f.select :load_truck_type, options_for_select(Load::LOAD_TRUCK_TYPE.map {|k| [k.humanize.capitalize]}, :selected=> params[:load].present? ? params[:load][:load_truck_type] : ''), :prompt=>"Truck Type" %>
-          </div>
-        <%# end %>
-    </td>
+      <div class="form-group form-margin-6">
+        <label for="from">Are you wiling to share<span>*</span></label>
+          <%= f.select :sharing, options_for_select(Load::LOAD_SHARE.map {|k,v| [k,v]}, :selected=> params[:sharing].present? ? params[:load][:sharing] : ''  ) %>      
+      </div>
+      </td>
 </tr>
 <tr>
         <td>   </td>
@@ -99,7 +109,7 @@
       <tr>
         <td colspan="3">
           <div>
-        <%= f.submit "Send Load", class: "main-btn" %>
+        <%= f.submit "Post Load", class: "main-btn" %>
       </div>
         </td>
       </tr>
