--- a/app/views/loads/_index.html.erb
+++ b/app/views/loads/_index.html.erb
@@ -7,6 +7,7 @@
   <th scope="col">Truck Type</th>
   <th scope="col">Schedule Date</th>
   <th scope="col">Willing to shared truck</th>
+  <th scope="col">Map</th>
   <th scope="col">Action</th>
   </tr>
   <% loads.each do |load| %>
@@ -31,6 +32,12 @@
         </td>
         <td>
           <span> <%= load.load_sharing(load) %></span>
+        </td>
+        <td>
+          <center>
+            <%= link_to image_tag('/assets/map_icon.png') + "",  root_direction_path(:load_from=> load.load_from, :load_to=>load.load_from), target: "_blank" %>
+            <!-- <img class="images-responsive image_map" alt="logo" src="/assets/map_icon.png"> -->
+          </center>
         </td>
         <td>
           <% if load.booked %>
