--- a/app/views/loads/index.html.erb
+++ b/app/views/loads/index.html.erb
@@ -363,7 +363,7 @@
                                     </div>
                                 </div>
                                 <div class="col-md-2 col-sm-4 mar-top-30 ">
-                                    <input type="submit" name="ctl00$cphContent$btnClear" value="Clear" id="cphContent_btnClear" title="Clear your details" class="btn btn-danger btn-xs divClear cleat-btn">
+                                    <%= link_to "Clear", loads_path, :class=> "btn btn-danger btn-xs divClear cleat-btn"%>
                                 </div>
                             </div>
                         </div>
