--- a/app/views/static/_header.html.erb
+++ b/app/views/static/_header.html.erb
@@ -37,30 +37,36 @@
  					</li>
  					<li class="has-dropdown"><a href="#">Post</a>
              <ul class="dropdown">
-              <% if current_user.role.name == "Load Provider" and user_signed_in? %>
-               <li>	
-                 <%= link_to "Post a Load", new_load_path, :class=> "post-load" %>
-               </li>
-              <% end %>
-               <% if current_user.role.name == "Truck Owner" and user_signed_in? %>
-                 <li>
-                   <%= link_to "Post a Truck", new_truck_path, :class=> "post-truck" %>
+              <% if current_user.present? %>
+                <% if current_user.role.name == "Load Provider" and user_signed_in? %>
+                 <li>	
+                   <%= link_to "Post a Load", new_load_path, :class=> "post-load" %>
                  </li>
-                <% end %>          
+                <% end %>
+                 <% if current_user.role.name == "Truck Owner" and user_signed_in? %>
+                   <li>
+                     <%= link_to "Post a Truck", new_truck_path, :class=> "post-truck" %>
+                   </li>
+                  <% end %> 
+               <% end %>           
              </ul>
            </li>
  					<li class="has-dropdown"><a href="#">Board</a>
              <ul class="dropdown">
-              <% if current_user.role.name == "Truck Owner" and user_signed_in? %>
-                <li>
-                  <%= link_to "Find a Load", loads_path %>
-                </li>
-              <% end %> 
-               <% if current_user.role.name == "Load Provider" and user_signed_in? %>
-                <li>
-                  <%= link_to "Find a Truck", trucks_path %>
-                </li>
-              <% end %>        
+              <% if current_user.present? %>
+                <% if current_user.role.name == "Truck Owner" and user_signed_in? %>
+                  <li>
+                    <%= link_to "Find a Load", loads_path %>
+                  </li>
+                <% end %>
+               <% end %>
+               <% if current_user.present? %>
+                 <% if current_user.role.name == "Load Provider" and user_signed_in? %>
+                  <li>
+                    <%= link_to "Find a Truck", trucks_path %>
+                  </li>
+                <% end %>   
+              <% end %>     
              </ul>
            </li>
            <li class="has-dropdown"><a href="#">Calculation</a>
