--- a/app/views/trucks/_index.html.erb
+++ b/app/views/trucks/_index.html.erb
@@ -1,30 +1,44 @@
+<% if trucks.present? %>
  <tr>
-  <th scope="col">Source City</th>
-  <th scope="col">Destination City</th>
-  <th scope="col">Weight (MT)</th>
-  <th scope="col">Truck Type</th>
-  <th scope="col">Action</th>
-</tr>
-<% trucks.each do |truck| %>
-  <tr>
-    <td>
-      <span id="cphContent_grdTruckPost_lblFrom_23" title=<%= truck.truck_from %>><%= truck.truck_from %></span>
-    </td>
-    <td>
-        <span id="cphContent_grdTruckPost_lblTo_23" title=<%= truck.truck_to %>><%= truck.truck_to %></span>
-    </td>
-    <td>
-      <span id="cphContent_grdTruckPost_lblWeight_23"><%= truck.truck_weight %></span>
-    </td>
-    <td>
-      <span id="cphContent_grdTruckPost_lblTruckType_23" title=<%= truck.truck_type %>><%= truck.truck_type %></span>
-    </td>
-    <td>
-      <% if truck.truck_booked == true %>
-        <%= link_to "Booked", "javascript:void(0)", :class=>"btn-xs btn-success btn-white-color" %>
-      <% else %>
-        <%= link_to "Book", send_truck_booked_mail_path(:id=> truck.id), :class=>"btn-xs btn-danger btn-white-color" %>
-      <% end %>  
-    </td>
+    <th scope="col">Source City</th>
+    <th scope="col">Destination City</th>
+    <th scope="col">Weight (MT)</th>
+    <th scope="col">Truck Type</th>
+    <th scope="col">Vehicle Number</th>
+    <th scope="col">Map</th>
+    <th scope="col">Action</th>
   </tr>
+  <% trucks.each do |truck| %>
+    <tr>
+      <td>
+        <span id="cphContent_grdTruckPost_lblFrom_23" title=<%= truck.truck_from %>><%= truck.truck_from %></span>
+      </td>
+      <td>
+          <span id="cphContent_grdTruckPost_lblTo_23" title=<%= truck.truck_to %>><%= truck.truck_to %></span>
+      </td>
+      <td>
+        <span id="cphContent_grdTruckPost_lblWeight_23"><%= truck.truck_weight %></span>
+      </td>
+      <td>
+        <span id="cphContent_grdTruckPost_lblTruckType_23" title=<%= truck.truck_type %>><%= truck.truck_type %></span>
+      </td>
+      <td>
+        <span id="cphContent_grdTruckPost_lblTruckType_23" title=<%= truck.vehicle_number if truck.vehicle_number.present? %>><%= truck.vehicle_number if truck.vehicle_number.present? %></span>
+      </td>
+      <td>
+        <center>
+          <%= link_to image_tag('/assets/map_icon.png') + "",  root_direction_path(:truck_from=> truck.truck_from, :truck_to=>truck.truck_to), target: "_blank" %>
+        </center>
+        </td>
+      <td>
+        <% if truck.truck_booked == true %>
+          <%= link_to "Booked", "javascript:void(0)", :class=>"btn-xs btn-success btn-white-color" %>
+        <% else %>
+          <%= link_to "Book", send_truck_booked_mail_path(:id=> truck.id), :class=>"btn-xs btn-danger btn-white-color" %>
+        <% end %>  
+      </td>
+    </tr>
+  <% end %>
+<% else %>
+  <tr><h3 class='text-data'>No data found</h3></tr>
 <% end %>
