--- a/app/views/trucks/index.html.erb
+++ b/app/views/trucks/index.html.erb
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <div id="divContentBody" class="pad-top-5 fix-min-height">
     <div class="container">
         <div id="cphContent_upTruckBoard">
@@ -7,7 +9,6 @@
                     to login to book truck.
                 </div>
                 <div id="cphContent_pnlLogin" class="modalPopup modalPopup-login" style="display: none; position: fixed; z-index: 100001; left: 636.5px; top: 295px;">
-	
                     <input type="submit" name="ctl00$cphContent$btnforLoginPopupRef" value="" id="cphContent_btnforLoginPopupRef" style="display: none;">
                     
                     <div class="modal-content">
@@ -335,6 +336,7 @@
                     <%= select_tag 'truck_from', options_for_select(country_list.collect{ |u| [u] }, :selected=> params[:truck_from].present? ? params[:truck_from] : ''), :class=> "input control-label col-sm-4 width-20", :prompt=>"Source" %>
                   <%= select_tag 'truck_to', options_for_select(country_list.collect{ |u| [u] }, :selected=> params[:truck_to].present? ? params[:truck_to] : ''), :prompt=>"Destination", :class=> "filter-type width-20" %>
                   <%= select_tag :vehicle_number, options_for_select(Truck.pluck(:vehicle_number).map {|k| [k]}, :selected=> params[:vehicle_number].present? ? params[:vehicle_number] : ''), :prompt=>"Vehicle Number", :class=> "filter-type width-20" %>
+                  <%= text_field_tag :schedule_date, "", class: 'width-15-date', id: "datepicker", :placeholder=>"Scheduled Date", value: params[:schedule_date].present? ? "#{params[:schedule_date]}" : '' %>
                   <%= submit_tag "Search", :name => nil %>
                 <% end %>
                 </div>
@@ -378,8 +380,6 @@
 </div>
                                 </div>
                             </div>
-
-
                         </div>
                     </div>
                 </div>
@@ -387,3 +387,6 @@
     </div>
 </div>
 <script src="/assets/custom.js"></script>
+<script type="text/javascript">
+  $( "#datepicker" ).datepicker({ minDate: 0, dateFormat: 'yy-mm-dd' });
+</script>
