--- a/app/views/trucks/new.html.erb
+++ b/app/views/trucks/new.html.erb
@@ -1,5 +1,7 @@
 <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.css">
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.js"></script>
 <div class="container">
   <h2>Post a Truck</h2>
   <p>Plese fill the following form to load  truck details</p>
@@ -41,7 +43,7 @@
       <tr>
         <td>
           <div class="form-group">
-        <label for="from">Weight(Metric Ton)<span>*</span></label>
+        <label for="from">Available truck capacity(Metric Ton)<span>*</span></label>
         <%= f.select :truck_weight, options_for_select(Load::LOAD_WEIGHT.map {|k| [k.humanize.capitalize]}),:prompt=>"Select Weight" %>
       </div>
         </td>
@@ -82,7 +84,25 @@
         </td>
       </tr>
       <tr>
-        <td></td>
+        <td>
+          <div class="form-group">
+            <label for="to">Transit time <span>*</span></label>
+            <span> <%= f.text_field :transit_time, :class=> "timepicker" %></span>
+          <!-- <input type="text" class="timepicker" name="time"/> -->
+          </div>
+        </td>
+      <td>
+      <div class="form-group form-margin-6">
+        <label for="from">Document<span class="note-docs">(will you provide LR,POD)</span></label>
+          <%= f.select :documentation, options_for_select(Load::LOAD_SHARE.map {|k,v| [k,v]}, :selected => params[:truck].present? ? params[:truck][:documentation] : ''  ) %>
+      </div>
+      </td>
+      <td>
+      <div class="form-group form-margin-6">
+        <label for="from">Are you wiling to share<span>*</span></label>
+          <%= f.select :sharing, options_for_select(Load::LOAD_SHARE.map {|k,v| [k,v]}, :selected=>  params[:truck].present? ? params[:truck][:sharing] : ''  ) %>      
+      </div>
+      </td>
       </tr>
       <tr>
         <td colspan="3">
@@ -96,4 +116,9 @@
 </div>
 <script type="text/javascript">
   $( "#datepicker" ).datepicker({ minDate: 0, dateFormat: 'yy-mm-dd' });
+  (function($) {
+    $(function() {
+      $('input.timepicker').timepicker();
+    });
+})(jQuery);
 </script>
